# napari-etdb

./: LICENSE  README.md  application.py  mkdocs.yml  setup.cfg  setup.py  tox.ini
napari_etdb/: browser.py  etdb.py  gui.py
napari_etdb/etdb_entries/: placeholders.py
