[metadata]
name = napari-etdb

author = Alister Burt
author_email = alisterburt@gmail.com
url = https://github.com/alisterburt/napari-etdb
license = BSD-3-Clause
description = napari interface for the Caltech electron tomography database
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/alisterburt/napari-etdb/issues
    Documentation = https://github.com/alisterburt/napari-etdb#README.md
    Source Code = https://github.com/alisterburt/napari-etdb
    User Support = https://github.com/alisterburt/napari-etdb/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    napari[all]
    numpy
    fastapi
    magicgui



[options.entry_points] 
napari.plugin = 
    napari-etdb = napari_etdb
